--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>React Boilerplate</title>
 
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Pacifico' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <main id="root"></main>
