--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <meta charSet="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 
-    <title>React Boilerplate</title>
+    <title>Scoreboard App</title>
 
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Pacifico" rel="stylesheet" type="text/css">
