removed open sans font, added roboto, fixed font errs

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Scoreboard App</title>
 
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Pacifico" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,500|Pacifico" rel="stylesheet" type="text/css">
   </head>
   <body>
     <main id="root"></main>
